[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Status.gd" type="Script" id=1]
[ext_resource path="res://scenes/Shaders.gd" type="Script" id=3]
[ext_resource path="res://scenes/Sliders.gd" type="Script" id=4]
[ext_resource path="res://scenes/Options.gd" type="Script" id=5]
[ext_resource path="res://scenes/Calibration.gd" type="Script" id=6]
[ext_resource path="res://scenes/CalibrationImages.gd" type="Script" id=7]
[ext_resource path="res://scenes/Maps.gd" type="Script" id=9]

[sub_resource type="Shader" id=12]
code = "shader_type canvas_item;

void fragment() {
    COLOR.xyz = mix(vec3(0.8, 0.4, 0), vec3(0.9, 0., 0.9), sin(TIME + UV.x * 3.2) + cos(TIME + UV.y * 1.31)); // , 0.5, 1.0);
}
"

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="GUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="GUI"]
material = SubResource( 13 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 278.0
margin_bottom = 596.0

[node name="TabContainer" type="TabContainer" parent="GUI"]
anchor_right = 0.691
anchor_bottom = 0.5
margin_left = 9.0
margin_top = 12.0
margin_right = 281.0
margin_bottom = 560.0

[node name="Intrinsics" type="Control" parent="GUI/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 9 )

[node name="ItemList" type="ItemList" parent="GUI/TabContainer/Intrinsics"]
margin_left = 15.0
margin_top = 55.0
margin_right = 271.0
margin_bottom = 466.0

[node name="LoadMap" type="Button" parent="GUI/TabContainer/Intrinsics"]
margin_left = 15.0
margin_top = 480.0
margin_right = 134.0
margin_bottom = 525.0
rect_pivot_offset = Vector2( 96, 25 )
text = "Load Map"

[node name="UnloadMap" type="Button" parent="GUI/TabContainer/Intrinsics"]
margin_left = 146.0
margin_top = 480.0
margin_right = 265.0
margin_bottom = 525.0
rect_pivot_offset = Vector2( 96, 25 )
text = "Clear Map"

[node name="HTTPRequest" type="HTTPRequest" parent="GUI/TabContainer/Intrinsics"]

[node name="HSlider" type="HSlider" parent="GUI/TabContainer/Intrinsics"]
margin_left = 16.0
margin_top = 5.0
margin_right = 266.0
margin_bottom = 42.0
min_value = 0.1
max_value = 5.0
step = 0.1
value = 0.1
tick_count = 15
ticks_on_borders = true

[node name="LUTs" type="Control" parent="GUI/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 3 )

[node name="ItemList" type="ItemList" parent="GUI/TabContainer/LUTs"]
margin_left = 12.0
margin_top = 8.0
margin_right = 275.0
margin_bottom = 513.0

[node name="HTTPRequest" type="HTTPRequest" parent="GUI/TabContainer/LUTs"]

[node name="Status" type="VBoxContainer" parent="GUI/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="ConnectionStatusContainer" type="HBoxContainer" parent="GUI/TabContainer/Status"]
margin_right = 291.0
margin_bottom = 475.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.9
custom_constants/separation = 0

[node name="Label" type="Label" parent="GUI/TabContainer/Status/ConnectionStatusContainer"]
margin_right = 145.0
margin_bottom = 475.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Status:"

[node name="RichTextLabel" type="RichTextLabel" parent="GUI/TabContainer/Status/ConnectionStatusContainer"]
margin_left = 145.0
margin_right = 291.0
margin_bottom = 475.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Connected."
text = "Connected."

[node name="Button" type="Button" parent="GUI/TabContainer/Status"]
margin_top = 479.0
margin_right = 291.0
margin_bottom = 532.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
text = "Ask For Permission"

[node name="Options" type="Control" parent="GUI/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 5 )

[node name="Container" type="VBoxContainer" parent="GUI/TabContainer/Options"]
anchor_right = 1.0
anchor_bottom = 0.9

[node name="ColorspaceContainer" type="VBoxContainer" parent="GUI/TabContainer/Options/Container"]
margin_right = 291.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="GUI/TabContainer/Options/Container/ColorspaceContainer"]
margin_right = 291.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
text = "Colorspace"

[node name="Items" type="ItemList" parent="GUI/TabContainer/Options/Container/ColorspaceContainer"]
margin_top = 18.0
margin_right = 291.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RemapContainer" type="VBoxContainer" parent="GUI/TabContainer/Options/Container"]
margin_top = 160.0
margin_right = 291.0
margin_bottom = 317.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="GUI/TabContainer/Options/Container/RemapContainer"]
margin_right = 291.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
text = "Remap Mode"

[node name="Items" type="ItemList" parent="GUI/TabContainer/Options/Container/RemapContainer"]
margin_top = 18.0
margin_right = 291.0
margin_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CameraOptionsBackground" type="ColorRect" parent="GUI/TabContainer/Options/Container"]
margin_top = 321.0
margin_right = 291.0
margin_bottom = 478.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.172549, 0.164706, 0.196078, 1 )

[node name="Scroll" type="ScrollContainer" parent="GUI/TabContainer/Options/Container/CameraOptionsBackground"]
margin_top = 4.0
margin_right = 284.0
margin_bottom = 160.0
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="GUI/TabContainer/Options/Container/CameraOptionsBackground/Scroll"]
margin_right = 284.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="Button" type="Button" parent="GUI/TabContainer/Options"]
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
text = "Refresh"

[node name="Calibration" type="Control" parent="GUI/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 6 )

[node name="UseCalibrated" type="Button" parent="GUI/TabContainer/Calibration"]
visible = false
margin_left = 5.0
margin_right = 285.0
margin_bottom = 40.0
text = "Use calibrated"

[node name="TestDisparityMap" type="Button" parent="GUI/TabContainer/Calibration"]
margin_left = 5.0
margin_top = 50.0
margin_right = 285.0
margin_bottom = 90.0
text = "Test disparity map"

[node name="ExitDisparityMap" type="Button" parent="GUI/TabContainer/Calibration"]
visible = false
margin_left = 5.0
margin_top = 100.0
margin_right = 285.0
margin_bottom = 140.0
text = "Exit disparity map"

[node name="EnterCalibrationMode" type="Button" parent="GUI/TabContainer/Calibration"]
margin_left = 5.0
margin_top = 150.0
margin_right = 285.0
margin_bottom = 190.0
text = "Enter Calibration Mode"

[node name="CancelCalibration" type="Button" parent="GUI/TabContainer/Calibration"]
visible = false
margin_left = 5.0
margin_top = 200.0
margin_right = 285.0
margin_bottom = 240.0
text = "Cancel calibration"

[node name="FinishCalibration" type="Button" parent="GUI/TabContainer/Calibration"]
visible = false
margin_left = 5.0
margin_top = 250.0
margin_right = 285.0
margin_bottom = 290.0
text = "Finish Calibration"

[node name="CalibrateFromFiles" type="Button" parent="GUI/TabContainer/Calibration"]
margin_left = 5.0
margin_top = 300.0
margin_right = 285.0
margin_bottom = 340.0
text = "Calibrate from files"

[node name="Images" type="VBoxContainer" parent="GUI/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 7 )

[node name="LeftImage" type="TextureRect" parent="GUI/TabContainer/Images"]
margin_right = 291.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="RightImage" type="TextureRect" parent="GUI/TabContainer/Images"]
margin_top = 222.0
margin_right = 291.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="Buttons" type="HBoxContainer" parent="GUI/TabContainer/Images"]
margin_top = 444.0
margin_right = 291.0
margin_bottom = 532.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="DiscardButton" type="Button" parent="GUI/TabContainer/Images/Buttons"]
margin_right = 143.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Discard"

[node name="AcceptButton" type="Button" parent="GUI/TabContainer/Images/Buttons"]
margin_left = 147.0
margin_right = 291.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Accept"
